--- a/lib/client/app/application/pages/projects/partials/project-list-template.html
+++ b/lib/client/app/application/pages/projects/partials/project-list-template.html
@@ -32,7 +32,7 @@
 			        			<md-icon style="color: {{base_hue_lighter.value}};">subdirectory_arrow_right</md-icon>
 		    				</md-button>
 							</a>
-							<div flex="100" flex-sm="100" flex-gt-sm="50" style="z-index: 2; margin: 0; padding: 0; min-width: 50%; min-height: 250px">
+							<div flex="100" flex-sm="100" flex-gt-sm="50" style="background-color: {{base_hue_lightest.value}}; opacity: .9; z-index: 2; margin: 0; padding: 0; min-width: 50%; min-height: 250px">
 								<md-card-header>
 									<md-card-header-text>
 										<h1 class="type heading" style="font-weight: bold; color: {{primary_hue_normal.value}};">{{item.data.title}}</h1>
@@ -72,7 +72,7 @@
 			        			<md-icon style="color: {{base_hue_lighter.value}};">subdirectory_arrow_right</md-icon>
 		    				</md-button>
 							</a>
-							<div flex="100" flex-sm="100" flex-gt-sm="50" style="z-index: 2; margin: 0; padding: 0; min-width: 50%; min-height: 250px">
+							<div flex="100" flex-sm="100" flex-gt-sm="50" style="background-color: {{base_hue_lightest.value}}; opacity: .9; z-index: 2; margin: 0; padding: 0; min-width: 50%; min-height: 250px">
 								<md-card-header>
 									<md-card-header-text>
 										<h1 class="type heading" style="font-weight: bold; color: {{primary_hue_normal.value}};">{{item.data.title}}</h1>
@@ -112,7 +112,7 @@
 			        			<md-icon style="color: {{base_hue_lighter.value}};">subdirectory_arrow_right</md-icon>
 		    				</md-button>
 							</a>
-							<div flex="100" flex-sm="100" flex-gt-sm="50" style="z-index: 2; margin: 0; padding: 0; min-width: 50%; min-height: 250px">
+							<div flex="100" flex-sm="100" flex-gt-sm="50" style="background-color: {{base_hue_lightest.value}}; opacity: .9; z-index: 2; margin: 0; padding: 0; min-width: 50%; min-height: 250px">
 								<md-card-header>
 									<md-card-header-text>
 										<h1 class="type heading" style="font-weight: bold; color: {{primary_hue_normal.value}};">{{item.data.title}}</h1>
@@ -152,7 +152,7 @@
 			        			<md-icon style="color: {{base_hue_lighter.value}};">subdirectory_arrow_right</md-icon>
 		    				</md-button>
 							</a>
-							<div flex="100" flex-sm="100" flex-gt-sm="50" style="z-index: 2; margin: 0; padding: 0; min-width: 50%; min-height: 250px">
+							<div flex="100" flex-sm="100" flex-gt-sm="50" style="background-color: {{base_hue_lightest.value}}; opacity: .9; z-index: 2; margin: 0; padding: 0; min-width: 50%; min-height: 250px">
 								<md-card-header>
 									<md-card-header-text>
 										<h1 class="type heading" style="font-weight: bold; color: {{primary_hue_normal.value}};">{{item.data.title}}</h1>
@@ -192,7 +192,7 @@
 			        			<md-icon style="color: {{base_hue_lighter.value}};">subdirectory_arrow_right</md-icon>
 		    				</md-button>
 							</a>
-							<div flex="100" flex-sm="100" flex-gt-sm="50" style="z-index: 2; margin: 0; padding: 0; min-width: 50%; min-height: 250px">
+							<div flex="100" flex-sm="100" flex-gt-sm="50" style="background-color: {{base_hue_lightest.value}}; opacity: .9; z-index: 2; margin: 0; padding: 0; min-width: 50%; min-height: 250px">
 								<md-card-header>
 									<md-card-header-text>
 										<h1 class="type heading" style="font-weight: bold; color: {{primary_hue_normal.value}};">{{item.data.title}}</h1>
@@ -232,7 +232,7 @@
 			        			<md-icon style="color: {{base_hue_lighter.value}};">subdirectory_arrow_right</md-icon>
 		    				</md-button>
 							</a>
-							<div flex="100" flex-sm="100" flex-gt-sm="50" style="z-index: 2; margin: 0; padding: 0; min-width: 50%; min-height: 250px">
+							<div flex="100" flex-sm="100" flex-gt-sm="50" style="background-color: {{base_hue_lightest.value}}; opacity: .9; z-index: 2; margin: 0; padding: 0; min-width: 50%; min-height: 250px">
 								<md-card-header>
 									<md-card-header-text>
 										<h1 class="type heading" style="font-weight: bold; color: {{primary_hue_normal.value}};">{{item.data.title}}</h1>
