--- a/lib/client/app/stylesheets/app.css
+++ b/lib/client/app/stylesheets/app.css
@@ -3,11 +3,11 @@ md-list md-list-item .md-avatar-icon {background-color: transparent!important;}
 
 .projects-listing {width: 100%; overflow: hidden; float: left; box-sizing: border-box;}
 .projects-listing md-card {overflow: hidden;}
-.projects-listing img {min-height: 100%; min-width: 100%; height: auto; width: auto; margin-left: -25%; margin-top: -50%; transform: scale(.8);}
+.projects-listing img {min-height: 100%; min-width: 100%; height: auto; width: auto; margin-left: -25%; margin-top: -25%;}
 .projects-listing .post-image {max-height: 300px;}
 
 @media screen and (max-width: 959px) {
-	
+	.projects-listing.full-width {width: 100%!important;}
 }
 
 @media screen and (max-width:599px) {
