--- a/lib/client/app/application/pages/projects/partials/project-list-template.html
+++ b/lib/client/app/application/pages/projects/partials/project-list-template.html
@@ -22,7 +22,7 @@
 					<md-icon style="color: {{base_hue_lightest.value}}; font-weight: bold;">keyboard_arrow_right</md-icon>
 				</md-button>
 				<div class="projects panel" style="left: 0; width: {{scroll_bar_aware_window_width * civil_engineering_row.panel_width}}px; transform:translate({{civil_engineering_row.amount_to_slide}},0);" ng-swipe-left="civil_engineering_row.panel_swipe('left')" ng-swipe-right="civil_engineering_row.panel_swipe('right')">
-					<div layout-padding class="projects-listing" ng-repeat="item in civil_engineering_row.data" ng-class="{'one-half': window_width >= 960, 'full-width': tablet, 'full-width': window_width < 600}">
+					<div layout-padding class="projects-listing" ng-repeat="item in civil_engineering_row.data" ng-class="{'one-half': window_width >= 960, 'full-width': window_width < 959, 'full-width': window_width < 600}">
 						<md-card class="md-whiteframe-6dp" layout="column" layout-wrap layout-sm="row" layout-gt-sm="row" layout-padding style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0; position: relative;">
 							<div class="post-image" flex="100" flex-sm="100" flex-gt-sm="50" style="margin: 0; padding: 0; min-width: 50%;">
 								<img ng-cloak src="{{item.data.page.foreground.images.source || 'https://storage.googleapis.com/mma-texas.appspot.com/media/images/missing-image-wide.png'}}" class="md-card-image">
@@ -62,7 +62,7 @@
 					<md-icon style="color: {{base_hue_lightest.value}}; font-weight: bold;">keyboard_arrow_right</md-icon>
 				</md-button>
 				<div class="projects panel" style="left: 0; width: {{scroll_bar_aware_window_width * landscape_architecture_row.panel_width}}px; transform:translate({{landscape_architecture_row.amount_to_slide}},0);" ng-swipe-left="landscape_architecture_row.panel_swipe('left')" ng-swipe-right="landscape_architecture_row.panel_swipe('right')">
-					<div layout-padding class="projects-listing" ng-repeat="item in landscape_architecture_row.data" ng-class="{'one-half': window_width >= 960, 'full-width': tablet, 'full-width': window_width < 600}">
+					<div layout-padding class="projects-listing" ng-repeat="item in landscape_architecture_row.data" ng-class="{'one-half': window_width >= 960, 'full-width': window_width < 959, 'full-width': window_width < 600}">
 						<md-card class="md-whiteframe-6dp" layout="column" layout-wrap layout-sm="row" layout-gt-sm="row" layout-padding style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0; position: relative;">
 							<div class="post-image" flex="100" flex-sm="100" flex-gt-sm="50" style="margin: 0; padding: 0; min-width: 50%;">
 								<img ng-cloak src="{{item.data.page.foreground.images.source || 'https://storage.googleapis.com/mma-texas.appspot.com/media/images/missing-image-wide.png'}}" class="md-card-image">
@@ -102,7 +102,7 @@
 					<md-icon style="color: {{base_hue_lightest.value}}; font-weight: bold;">keyboard_arrow_right</md-icon>
 				</md-button>
 				<div class="projects panel" style="left: 0; width: {{scroll_bar_aware_window_width * planning_row.panel_width}}px; transform:translate({{planning_row.amount_to_slide}},0);" ng-swipe-left="planning_row.panel_swipe('left')" ng-swipe-right="planning_row.panel_swipe('right')">
-					<div layout-padding class="projects-listing" ng-repeat="item in planning_row.data" ng-class="{'one-half': window_width >= 960, 'full-width': tablet, 'full-width': window_width < 600}">
+					<div layout-padding class="projects-listing" ng-repeat="item in planning_row.data" ng-class="{'one-half': window_width >= 960, 'full-width': window_width < 959, 'full-width': window_width < 600}">
 						<md-card class="md-whiteframe-6dp" layout="column" layout-wrap layout-sm="row" layout-gt-sm="row" layout-padding style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0; position: relative;">
 							<div class="post-image" flex="100" flex-sm="100" flex-gt-sm="50" style="margin: 0; padding: 0; min-width: 50%;">
 								<img ng-cloak src="{{item.data.page.foreground.images.source || 'https://storage.googleapis.com/mma-texas.appspot.com/media/images/missing-image-wide.png'}}" class="md-card-image">
@@ -142,7 +142,7 @@
 					<md-icon style="color: {{base_hue_lightest.value}}; font-weight: bold;">keyboard_arrow_right</md-icon>
 				</md-button>
 				<div class="projects panel" style="left: 0; width: {{scroll_bar_aware_window_width * surveying_row.panel_width}}px; transform:translate({{surveying_row.amount_to_slide}},0);" ng-swipe-left="surveying_row.panel_swipe('left')" ng-swipe-right="surveying_row.panel_swipe('right')">
-					<div layout-padding class="projects-listing" ng-repeat="item in surveying_row.data" ng-class="{'one-half': window_width >= 960, 'full-width': tablet, 'full-width': window_width < 600}">
+					<div layout-padding class="projects-listing" ng-repeat="item in surveying_row.data" ng-class="{'one-half': window_width >= 960, 'full-width': window_width < 959, 'full-width': window_width < 600}">
 						<md-card class="md-whiteframe-6dp" layout="column" layout-wrap layout-sm="row" layout-gt-sm="row" layout-padding style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0; position: relative;">
 							<div class="post-image" flex="100" flex-sm="100" flex-gt-sm="50" style="margin: 0; padding: 0; min-width: 50%;">
 								<img ng-cloak src="{{item.data.page.foreground.images.source || 'https://storage.googleapis.com/mma-texas.appspot.com/media/images/missing-image-wide.png'}}" class="md-card-image">
@@ -182,7 +182,7 @@
 					<md-icon style="color: {{base_hue_lightest.value}}; font-weight: bold;">keyboard_arrow_right</md-icon>
 				</md-button>
 				<div class="projects panel" style="left: 0; width: {{scroll_bar_aware_window_width * gis_row.panel_width}}px; transform:translate({{gis_row.amount_to_slide}},0);" ng-swipe-left="gis_row.panel_swipe('left')" ng-swipe-right="gis_row.panel_swipe('right')">
-					<div layout-padding class="projects-listing" ng-repeat="item in gis_row.data" ng-class="{'one-half': window_width >= 960, 'full-width': tablet, 'full-width': window_width < 600}">
+					<div layout-padding class="projects-listing" ng-repeat="item in gis_row.data" ng-class="{'one-half': window_width >= 960, 'full-width': window_width < 959, 'full-width': window_width < 600}">
 						<md-card class="md-whiteframe-6dp" layout="column" layout-wrap layout-sm="row" layout-gt-sm="row" layout-padding style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0; position: relative;">
 							<div class="post-image" flex="100" flex-sm="100" flex-gt-sm="50" style="margin: 0; padding: 0; min-width: 50%;">
 								<img ng-cloak src="{{item.data.page.foreground.images.source || 'https://storage.googleapis.com/mma-texas.appspot.com/media/images/missing-image-wide.png'}}" class="md-card-image">
@@ -222,7 +222,7 @@
 					<md-icon style="color: {{base_hue_lightest.value}}; font-weight: bold;">keyboard_arrow_right</md-icon>
 				</md-button>
 				<div class="projects panel" style="left: 0; width: {{scroll_bar_aware_window_width * projects_aerial_mapping.panel_width}}px; transform:translate({{amount_to_slide}},0);" ng-swipe-left="projects_aerial_mapping.panel_swipe('left')" ng-swipe-right="projects_aerial_mapping.panel_swipe('right')">
-					<div layout-padding class="projects-listing" ng-repeat="item in aerial_mapping_row.data" ng-class="{'one-half': window_width >= 960, 'full-width': tablet, 'full-width': window_width < 600}">
+					<div layout-padding class="projects-listing" ng-repeat="item in aerial_mapping_row.data" ng-class="{'one-half': window_width >= 960, 'full-width': window_width < 959, 'full-width': window_width < 600}">
 						<md-card class="md-whiteframe-6dp" layout="column" layout-wrap layout-sm="row" layout-gt-sm="row" layout-padding style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0; position: relative;">
 							<div class="post-image" flex="100" flex-sm="100" flex-gt-sm="50" style="margin: 0; padding: 0; min-width: 50%;">
 								<img ng-cloak src="{{item.data.page.foreground.images.source || 'https://storage.googleapis.com/mma-texas.appspot.com/media/images/missing-image-wide.png'}}" class="md-card-image">
