--- a/lib/client/app/application/partials/header.html
+++ b/lib/client/app/application/partials/header.html
@@ -1,7 +1,7 @@
 <!-- sticky header -->
 <div layout-align="center center" layout="row" layout flex>
 	<!-- Logo -->
-	<div flex="100" flex-gt-sm="25" layout-align="center center" layout-align-gt-sm="center center" layout="row">
+	<div flex="100" flex-gt-sm="25" layout-align="start center" layout-align-gt-sm="center center" layout="row">
 		<img src="media/logo.png" style="max-height: 64px;">
 	</div>
 	<!-- Logo -->
