--- a/lib/client/app/application/pages/projects/partials/project-list-template.html
+++ b/lib/client/app/application/pages/projects/partials/project-list-template.html
@@ -11,7 +11,7 @@
 
 		<!-- slider #1 -->
 		<div class="lw-auto-slider projects" style="position: relative;" ng-if="projects_civil_engineering.length">
-			<div style="position: absolute; width: 100%; left: 0; top: 84px; text-align: left; z-index: 3;">
+			<div style="position: relative; padding-left: 16px; padding-top: 16px; padding-bottom: 8px; width: 100%; text-align: left; z-index: 3;">
 				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 32px; padding-left: 16px; margin: 0; font-weight: bold;">Civil Engineering</h1>
 			</div>
 			<div class="lw-auto-slider-container projects">
@@ -51,7 +51,7 @@
 
 		<!-- slider #2 -->
 		<div class="lw-auto-slider projects" style="position: relative;" ng-if="projects_landscape_architecture.length">
-			<div style="position: absolute; width: 100%; left: 0; top: 84px; text-align: left; z-index: 3;">
+			<div style="position: relative; padding-left: 16px; padding-top: 16px; padding-bottom: 8px; width: 100%; text-align: left; z-index: 3;">
 				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 32px; padding-left: 16px; margin: 0; font-weight: bold;">Landscape Architecture</h1>
 			</div>
 			<div class="lw-auto-slider-container projects">
@@ -91,7 +91,7 @@
 
 		<!-- slider #3 -->
 		<div class="lw-auto-slider projects" style="position: relative;" ng-if="projects_planning.length">
-			<div style="position: absolute; width: 100%; left: 0; top: 84px; text-align: left; z-index: 3;">
+			<div style="position: relative; padding-left: 16px; padding-top: 16px; padding-bottom: 8px; width: 100%; text-align: left; z-index: 3;">
 				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 32px; padding-left: 16px; margin: 0; font-weight: bold;">Planning</h1>
 			</div>
 			<div class="lw-auto-slider-container projects">
@@ -131,7 +131,7 @@
 
 		<!-- slider #4 -->
 		<div class="lw-auto-slider projects" style="position: relative;" ng-if="projects_surveying.length">
-			<div style="position: absolute; width: 100%; left: 0; top: 84px; text-align: left; z-index: 3;">
+			<div style="position: relative; padding-left: 16px; padding-top: 16px; padding-bottom: 8px; width: 100%; text-align: left; z-index: 3;">
 				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 32px; padding-left: 16px; margin: 0; font-weight: bold;">Surveying</h1>
 			</div>
 			<div class="lw-auto-slider-container projects">
@@ -171,7 +171,7 @@
 
 		<!-- slider #5 -->
 		<div class="lw-auto-slider projects" style="position: relative;" ng-if="projects_gis.length">
-			<div style="position: absolute; width: 100%; left: 0; top: 84px; text-align: left; z-index: 3;">
+			<div style="position: relative; padding-left: 16px; padding-top: 16px; padding-bottom: 8px; width: 100%; text-align: left; z-index: 3;">
 				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 32px; padding-left: 16px; margin: 0; font-weight: bold;">GIS</h1>
 			</div>
 			<div class="lw-auto-slider-container projects">
@@ -211,7 +211,7 @@
 
 		<!-- slider #6 -->
 		<div class="lw-auto-slider projects" style="position: relative;" ng-if="projects_aerial_mapping.length">
-			<div style="position: absolute; width: 100%; left: 0; top: 84px; text-align: left; z-index: 3;">
+			<div style="position: relative; padding-left: 16px; padding-top: 16px; padding-bottom: 8px; width: 100%; text-align: left; z-index: 3;">
 				<h1 class="type heading-2" style="color: {{base_hue_darkest.value}}; line-height: 32px; padding-left: 16px; margin: 0; font-weight: bold;">Aerial Mapping</h1>
 			</div>
 			<div class="lw-auto-slider-container projects">
