--- a/lib/client/app/application/partials/footer.html
+++ b/lib/client/app/application/partials/footer.html
@@ -1,4 +1,4 @@
-<div layout="column" layout-align="center center" class="footer-container" flex style="background-color: {{base_hue_darkest.value}}; overflow: hidden; position: relative;">
+<div layout="column" layout-align="center center" class="footer-container" flex ng-attr-style="background-color: {{base_hue_darkest.value}}; overflow: hidden; position: relative;">
 	<div class="footer-content-top" layout="column" layout-gt-sm="row" layout-padding flex style="z-index: 2">
 		<div layout="column" layout-padding layout-align="center center" flex="100" flex-gt-sm="33">
 			<div>
