--- a/lib/client/app/application/partials/footer.html
+++ b/lib/client/app/application/partials/footer.html
@@ -9,16 +9,16 @@
 			<div layout-padding flex="100" flex-sm="33" flex-gt-sm="33">
 				<md-list>
 					<md-list-item>
-						<p style="font-weight: bold; color: {{base_hue_lightest.value}};">Services</p>
+						<p ng-attr-style="font-weight: bold; color: {{base_hue_lightest.value}};">Services</p>
 					</md-list-item>
 					<md-list-item>
-						<a href="/"><p style="color: {{base_hue_lightest.value}};">Civil Engineering</p></a>
+						<a href="/"><p ng-attr-style="color: {{base_hue_lightest.value}};">Civil Engineering</p></a>
 					</md-list-item>
 					<md-list-item>
-						<a href="/"><p style="color: {{base_hue_lightest.value}};">Surveying</p></a>
+						<a href="/"><p ng-attr-style="color: {{base_hue_lightest.value}};">Surveying</p></a>
 					</md-list-item>
 					<md-list-item>
-						<a href="/"><p style="color: {{base_hue_lightest.value}};">Landscape Architecture</p></a>
+						<a href="/"><p ng-attr-style="color: {{base_hue_lightest.value}};">Landscape Architecture</p></a>
 					</md-list-item>
 				</md-list>
 			</div>
@@ -28,29 +28,29 @@
 						<p style="font-weight: bold; color: {{base_hue_lightest.value}};">Quick Links</p>
 					</md-list-item>
 					<md-list-item>
-						<a href="/"><p style="color: {{base_hue_lightest.value}};">Careers</p></a>
+						<a href="/"><p ng-attr-style="color: {{base_hue_lightest.value}};">Careers</p></a>
 					</md-list-item>
 					<md-list-item>
-						<a href="/"><p style="color: {{base_hue_lightest.value}};">Services</p></a>
+						<a href="/"><p ng-attr-style="color: {{base_hue_lightest.value}};">Services</p></a>
 					</md-list-item>
 					<md-list-item>
-						<a href="/"><p style="color: {{base_hue_lightest.value}};">Projects</p></a>
+						<a href="/"><p ng-attr-style="color: {{base_hue_lightest.value}};">Projects</p></a>
 					</md-list-item>
 				</md-list>
 			</div>
 			<div layout-padding flex="100" flex-sm="33" flex-gt-sm="33">
 				<md-list>
 					<md-list-item>
-						<p style="font-weight: bold; color: {{base_hue_lightest.value}};">Stay Connected</p>
+						<p ng-attr-style="font-weight: bold; color: {{base_hue_lightest.value}};">Stay Connected</p>
 					</md-list-item>
 					<md-list-item>
-						<a href="/"><p style="color: {{base_hue_lightest.value}};">Facebook</p></a>
+						<a href="/"><p ng-attr-style="color: {{base_hue_lightest.value}};">Facebook</p></a>
 					</md-list-item>
 					<md-list-item>
-						<a href="/"><p style="color: {{base_hue_lightest.value}};">Twitter</p></a>
+						<a href="/"><p ng-attr-style="color: {{base_hue_lightest.value}};">Twitter</p></a>
 					</md-list-item>
 					<md-list-item>
-						<a href="/"><p style="color: {{base_hue_lightest.value}};">Pinterest</p></a>
+						<a href="/"><p ng-attr-style="color: {{base_hue_lightest.value}};">Pinterest</p></a>
 					</md-list-item>
 				</md-list>
 			</div>
@@ -61,7 +61,7 @@
 		<div layout-padding flex="100" flex-gt-sm="70">
 			<div flex layout="row" layout-align="end center" layout-wrap>
 				<div flex="50" flex-sm="25" flex-gt-sm="25">
-					<p style="color: {{base_hue_lightest.value}};">{{settings.data.company_name}} &#169; {{year}}</p>
+					<p ng-attr-style="color: {{base_hue_lightest.value}};">{{settings.data.company_name}} &#169; {{year}}</p>
 				</div>
 				<div flex="50" flex-sm="25" flex-gt-sm="25">
 					<a href="/"><p style="color: {{base_hue_lightest.value}};">Privacy &amp; Terms</p></a>
@@ -70,7 +70,7 @@
 					<h1 class="type heading footer" style="display: inline-block; color: {{base_hue_lightest.value}};">Superpowered By Lightweight</h1>
 					<md-menu style="display: inline-block;">
 	                    <md-button aria-label="Lightweight menu" class="md-icon-button" ng-click="openMenu($mdMenu, $event)">
-	                        <md-icon md-menu-origin style="color: {{base_hue_lightest.value}}">settings</md-icon>
+	                        <md-icon md-menu-origin ng-attr-style="color: {{base_hue_lightest.value}}">settings</md-icon>
 	                    </md-button>
 	                    <md-menu-content width="4">
 	                        <md-menu-item ng-show="user">
