--- a/lib/client/app/application/landing/partials/section_2.html
+++ b/lib/client/app/application/landing/partials/section_2.html
@@ -10,20 +10,19 @@
 			<md-icon ng-attr-style="color: {{base_hue_lightest.value}}; font-weight: bold;">keyboard_arrow_right</md-icon>
 		</md-button>
 		<div class="news panel" ng-attr-style="left: 0; width: {{scroll_bar_aware_window_width * news_post_width}}px; transform:translate({{amount_to_slide}},0);" ng-swipe-left="panel_swipe('left')" ng-swipe-right="panel_swipe('right')">
-			<div layout-padding class="index-news-post" ng-repeat="item in bloglist | limit:7" ng-class="{'one-third': window_width >= 960, 'one-half': window_width < 960 && window_width > 600, 'full-width': window_width < 600}">
+			<div layout-padding class="index-news-post" ng-repeat="blog in bloglist | limit:7" ng-class="{'one-third': window_width >= 960, 'one-half': window_width < 960 && window_width > 600, 'full-width': window_width < 600}">
+				<a ng-href="{{blog.settings.url}}">
 				<md-card layout-padding style="background: transparent; height: 100%; padding: 0;">
-					<div class="post-image">
-						<img ng-cloak src="media/six-flags1.jpg" class="md-card-image">
-					</div>
 					<md-card-header>
 						<md-card-header-text>
-							<span class="md-title" ng-attr-style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">Brand New Look</span>
+							<span class="md-title" ng-attr-style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">{{blog.data.title}}</span>
 						</md-card-header-text>
 					</md-card-header>
 					<md-card-content>
-						<p style="color: {{base_hue_darker.value}};">Welcome to MMA's new web experience!</p>
+						<p style="color: {{base_hue_darker.value}};">{{blog.data.headline}}</p>
 					</md-card-content>
 				</md-card>
+				</a>
 			</div>
 		</div>
 	</div>
