--- a/lib/client/app/application/landing/partials/section_2.html
+++ b/lib/client/app/application/landing/partials/section_2.html
@@ -12,15 +12,18 @@
 		<div class="news panel" ng-attr-style="left: 0; width: {{scroll_bar_aware_window_width * news_post_width}}px; transform:translate({{amount_to_slide}},0);" ng-swipe-left="panel_swipe('left')" ng-swipe-right="panel_swipe('right')">
 			<div layout-padding class="index-news-post" ng-repeat="blog in bloglist | limitTo:7" ng-class="{'one-third': window_width >= 960, 'one-half': window_width < 960 && window_width > 600, 'full-width': window_width < 600}">
 				<a ng-href="{{blog.settings.url}}">
-				<md-card layout-padding style="background: transparent; height: 100%; padding: 0;">
-					<md-card-header>
-						<md-card-header-text>
-							<span class="md-title" ng-attr-style="font-size: 18px; font-weight: bold; color: {{primary_hue_normal.value}};">{{blog.data.title}}</span>
-						</md-card-header-text>
-					</md-card-header>
-					<md-card-content>
-						<p style="color: {{base_hue_darker.value}};">{{blog.data.headline}}</p>
-					</md-card-content>
+				<md-card class="md-whiteframe-6dp" layout="column" layout-wrap layout-sm="row" layout-gt-sm="row" layout-padding style="background: {{base_hue_lightest.value}}; height: 100%; padding: 0; position: relative;">
+					<md-list class="md-dense" flex>
+						<a ng-href="{{blog.settings.url}}">
+	                    <md-list-item class="md-3-line" flex>
+	                        <div class="md-list-item-text">
+	                        	<h3 style="font-size: 24px;">{{blog.data.title}}</h3>
+	                            <p style="color: {{primary_hue_normal.value}};">{{blog.data.headline}}</p>
+	                            <p>By {{blog.data.author}}  /  {{blog.data.date | date : "MMM d, y h:mm:ss a"}}</p>
+	                        </div>                        
+	                    </md-list-item>
+	                    </a>
+	                </md-list>
 				</md-card>
 				</a>
 			</div>
