--- a/lib/client/app/stylesheets/index.css
+++ b/lib/client/app/stylesheets/index.css
@@ -3,9 +3,9 @@
 /* index-featured-services */
 
 /* index-slider */
-.lw-auto-slider {height: 100%;}
+.lw-auto-slider {height: 400px;}
 .lw-auto-slider.projects {height: 100%;}
-.lw-auto-slider-container {position: relative; background-color: transparent; z-index: 2; padding-top: 0; padding-bottom: 0; width: 100%; top: 0; bottom: 0; left: 0; right: 0; overflow: hidden;}
+.lw-auto-slider-container {position: relative; background-color: transparent; z-index: 2; padding-top: 0; padding-bottom: 0; height: 100%; width: 100%; top: 0; bottom: 0; left: 0; right: 0; overflow: hidden;}
 .lw-auto-slider-container.projects {position: relative; background-color: transparent; z-index: 2; padding-top: 0; padding-bottom: 0; width: 100%; top: 0; bottom: 0; left: 0; right: 0; overflow: hidden;}
 .index-news-post {width: 33%; overflow: hidden; float: left; box-sizing: border-box;}
 .index-news-post md-card {overflow: hidden;}
@@ -13,7 +13,7 @@
 .index-news-post .post-image {max-height: 300px; overflow: hidden;}
 
 @media screen and (max-width:599px) {
-	.lw-auto-slider {height: 100%;}
+	.lw-auto-slider {height: 400px;}
 	.lw-auto-slider.projects {height: 100%;}
   	.index-news-post.full-width {width: 100%!important;}
 }
