--- a/lib/client/app/application/landing/partials/slideshow.html
+++ b/lib/client/app/application/landing/partials/slideshow.html
@@ -12,7 +12,7 @@
         	<div style="position: relative; max-width: 468px; height: 300px;" layout="row" layout-align="center center" flex>
 	            <div layout="row" layout-margin layout-align="start center">
 	                <div layout="column" layout-align="center start">
-	                    <h1 class="type simulated" style="color: {{base_hue_lightest.value}}; line-height: 64px; margin: 0; text-shadow: 1px 1.5px rgba(10,10,10,0.4)">We strive to <span style="color: {{primary_hue_normal.value}}" typewrite initial-delay="2000" blink-cursor="true" ng-attr-text="valueStatements"></span></h1>
+	                    <h1 class="type simulated" ng-attr-style="color: {{base_hue_lightest.value}}; line-height: 64px; margin: 0; text-shadow: 1px 1.5px rgba(10,10,10,0.4)">We strive to <span ng-attr-style="color: {{primary_hue_normal.value}}" typewrite initial-delay="2000" blink-cursor="true" ng-attr-text="valueStatements"></span></h1>
 	                </div>
 	            </div>
             </div>
