--- a/lib/client/app/application/landing/partials/section_2.html
+++ b/lib/client/app/application/landing/partials/section_2.html
@@ -1,31 +1,29 @@
-<div class="lw-auto-slider" style="position: relative;">
-	<div style="position: absolute; width: 100%; left: 0; top: 48px; text-align: center; z-index: 3;">
-		<h1 class="type heading" ng-attr-style="color: {{base_hue_darkest.value}}; line-height: 64px; margin: 0; font-weight: bold;">MMA IN THE NEWS</h1>
+<div flex layout="row" layout-align="center start" layout-wrap layout-padding layout-margin ng-attr-style="background-color: {{base_hue_lighter.value}};">
+	<div flex="100" style="text-align: center;">
+		<h1 class="type heading" ng-attr-style="color: {{base_hue_darkest.value}}; line-height: 64px; margin: 0; font-weight: bold;">mma NEWS</h1>
 	</div>
-	<div class="lw-auto-slider-container">
-		<md-button class="md-whiteframe-4dp" ng-click="panel_swipe('right')" ng-disabled="news_post_swipe == false" ng-attr-style="color: {{base_hue_lightest.value}}; background-color: {{primary_hue_normal.value}}; position: absolute; left: 8px; top: 34%; z-index: 3; height: 128px; min-width: 24px;">
+	<div flex="100" layout-align="center start" layout="column" layout-wrap layout-sm="row" layout-gt-sm="row">
+		<!-- <md-button class="md-whiteframe-4dp" ng-click="panel_swipe('right')" ng-disabled="news_post_swipe == false" ng-attr-style="color: {{base_hue_lightest.value}}; background-color: {{primary_hue_normal.value}}; position: absolute; left: 8px; top: 34%; z-index: 3; height: 128px; min-width: 24px;">
 			<md-icon ng-attr-style="color: {{base_hue_lightest.value}}; font-weight: bold;">keyboard_arrow_left</md-icon>
 		</md-button>
 		<md-button class="md-whiteframe-4dp" ng-click="panel_swipe('left')" ng-disabled="news_post_swipe == false" ng-attr-style="color: {{base_hue_lightest.value}}; background-color: {{primary_hue_normal.value}}; position: absolute; right: 8px; top: 34%; z-index: 3; height: 128px; min-width: 24px;">
 			<md-icon ng-attr-style="color: {{base_hue_lightest.value}}; font-weight: bold;">keyboard_arrow_right</md-icon>
-		</md-button>
-		<div class="news panel" ng-attr-style="left: 0; width: {{scroll_bar_aware_window_width * news_post_width}}px; transform:translate({{amount_to_slide}},0);" ng-swipe-left="panel_swipe('left')" ng-swipe-right="panel_swipe('right')">
-			<div layout-padding class="index-news-post" ng-repeat="blog in bloglist | limitTo:7" ng-class="{'one-third': window_width >= 960, 'one-half': window_width < 960 && window_width > 600, 'full-width': window_width < 600}">
-				<md-card class="md-whiteframe-6dp" layout-align="center center" layout="column" layout-wrap layout-sm="row" layout-gt-sm="row" layout-padding style="background: {{base_hue_lightest.value}}; height: 100%; position: relative;">
-					<md-list class="md-dense" flex>
-	                    <md-list-item class="md-3-line" flex>
-	                    	<a ng-href="{{blog.settings.url}}">
-		                        <div class="md-list-item-text">
-		                        	<h3 style="font-size: 24px;">{{blog.data.title}}</h3>
-		                            <p style="color: {{primary_hue_normal.value}};">{{blog.data.subtitle}}</p>
-		                            <p>By {{blog.data.author}}  /  {{blog.data.date | date : "MMM d, y h:mm a"}}</p>
-		                        </div>
-	                        </a>                        
-	                    </md-list-item>
-	                    
-	                </md-list>
-				</md-card>
-			</div>
+		</md-button> -->
+		<div layout-padding ng-repeat="blog in bloglist | limitTo:7" flex="100" flex-sm="50" flex-gt-sm="33">
+			<md-card class="md-whiteframe-6dp" layout-align="center center" layout="column" layout-wrap layout-sm="row" layout-gt-sm="row" layout-padding style="background: {{base_hue_lightest.value}}; height: 100%; position: relative;">
+				<md-list class="md-dense" flex>
+                    <md-list-item class="md-3-line" flex>
+                    	<a ng-href="{{blog.settings.url}}">
+	                        <div class="md-list-item-text">
+	                        	<h3 style="font-size: 32px;">{{blog.data.title}}</h3>
+	                            <p style="color: {{primary_hue_normal.value}};">{{blog.data.subtitle}}</p>
+	                            <p>By {{blog.data.author}}  /  {{blog.data.date | date : "MMM d, y h:mm a"}}</p>
+	                        </div>
+                        </a>                        
+                    </md-list-item>
+                    
+                </md-list>
+			</md-card>
 		</div>
 	</div>
 </div>
